@@ -5689,7 +5689,7 @@ class="element-name">'feCustom'</span></h2>
     <p class="issue">Reference to discussion missing.</p>
 
     <div class="figure" id="vertexMesh56">
-      <img src="images/shader-mesh-property.png" width="300" />
+      <object data="images/shader-concept.svg#granular-mesh" style="width:372px; height:252px"></object> 
       <p class="caption">
         The figure illustrates how a <a>'vertexMesh attribute'</a> value of '5 6' adds vertices passed to the vertex shader.
         The red vertices are the default ones and the gray vertices are resulting from the <a>'vertexMesh attribute'</a> value.
@@ -5767,7 +5767,7 @@ class="element-name">'feCustom'</span></h2>
 <p>This section illustrates the shader processing model as it applies to an element whose unfiltered rendering is shown in the figure <a href="#unfiltered-input">below</a>.</p>
 
 <div class="figure" id="unfiltered-input">
-  <img src="images/intro-filtered-element.png" width="300" />
+  <object type="image/svg+xml" data="images/shader-concept.svg#image" style="width:372px; height:252px"/>
   <p class="caption">Element before applying shaders</p>
 </div>
 
@@ -5777,7 +5777,7 @@ class="element-name">'feCustom'</span></h2>
 </p>
 
 <div class="figure">
-  <img src="images/shader-concepts-source-texture.png" width="300" />
+  <object type="image/svg+xml" data="images/shader-concept.svg#image-raster" style="width:372px; height:252px"/> 
   <p class="caption">Source texture created by rendering<br />the element offscreen and adding filter primitive margins</p>
 </div>
 
@@ -5795,7 +5795,7 @@ class="element-name">'feCustom'</span></h2>
 </p>
 
 <div class="figure">
-  <img src="images/shader-concepts-default-mesh.png" width="300" />
+  <object data="images/shader-concept.svg#image-default-mesh" style="width:372px; height:252px"></object> 
   <p class="caption">The default vertex mesh and its default vertices</p>
 </div>
 
@@ -5805,7 +5805,7 @@ class="element-name">'feCustom'</span></h2>
 </p>
 
 <div class="figure">
-  <img src="images/shader-concepts-finer-mesh.png" width="300" />
+  <object data="images/shader-concept.svg#image-granular-mesh" style="width:372px; height:252px"></object> 
   <p class="caption">A finer, custom vertex mesh</p>
 </div>
 
