@@ -12442,8 +12442,9 @@ double turbulence(int nColorChannel, double *point, double <a
 
   <p class=issue>Reference to discussion missing.
 
-  <div class=figure id=vertexMesh56> <img
-   src="images/shader-mesh-property.png" width=300>
+  <div class=figure id=vertexMesh56> <object
+   data="images/shader-concept.svg#granular-mesh"
+   style="width:372px; height:252px"></object>
    <p class=caption> The figure illustrates how a <a>‘<code
     class=css>vertexMesh attribute</code>’</a> value of ‘<code
     class=css>5 6</code>’ adds vertices passed to the vertex shader. The
@@ -12523,21 +12524,22 @@ double turbulence(int nColorChannel, double *point, double <a
    element whose unfiltered rendering is shown in the figure <a
    href="#unfiltered-input">below</a>.
 
-  <div class=figure id=unfiltered-input> <img
-   src="images/intro-filtered-element.png" width=300>
+  <div class=figure id=unfiltered-input> <object
+   data="images/shader-concept.svg#image" style="width:372px; height:252px"
+   type="image/svg+xml">
    <p class=caption>Element before applying shaders</p>
-  </div>
+   </object></div>
 
   <p> Prior to the shader processing, the input of the filter primitive gets
    rendered into an offscreen image (the source texture). The offscreen size
    and position is controlled by the <a
    href="#FilterPrimitiveSubRegion">filter primitive subregion</a>.
 
-  <div class=figure> <img src="images/shader-concepts-source-texture.png"
-   width=300>
+  <div class=figure> <object data="images/shader-concept.svg#image-raster"
+   style="width:372px; height:252px" type="image/svg+xml">
    <p class=caption>Source texture created by rendering<br>
     the element offscreen and adding filter primitive margins</p>
-  </div>
+   </object></div>
 
   <p>An <a>‘<code class=css>feCustom element</code>’</a> element or a
    <code>custom()</code> filter function defines a custom filter primitive.
@@ -12554,8 +12556,9 @@ double turbulence(int nColorChannel, double *point, double <a
    default vertices in the default vertex mesh. The diagonal line illustrate
    how the vertices define two triangles. </span>
 
-  <div class=figure> <img src="images/shader-concepts-default-mesh.png"
-   width=300>
+  <div class=figure> <object
+   data="images/shader-concept.svg#image-default-mesh"
+   style="width:372px; height:252px"></object>
    <p class=caption>The default vertex mesh and its default vertices</p>
   </div>
 
@@ -12564,8 +12567,9 @@ double turbulence(int nColorChannel, double *point, double <a
    &lt;vertex-mesh&gt; parameter on the <code>custom()</code> filter function
    give more granularity controll over the vertex mesh.
 
-  <div class=figure> <img src="images/shader-concepts-finer-mesh.png"
-   width=300>
+  <div class=figure> <object
+   data="images/shader-concept.svg#image-granular-mesh"
+   style="width:372px; height:252px"></object>
    <p class=caption>A finer, custom vertex mesh</p>
   </div>
 
