@@ -3,6 +3,10 @@ Changes for Filter Effects specification
 
 2012-06-25  Dirk Schulze  <dschulze@adobe.com>
 
+- added svg stack for shader concept - replaces PNGs
+
+2012-06-25  Dirk Schulze  <dschulze@adobe.com>
+
 - started adding shader processing model
 - issue corrections on shader boxes
 
